# slurm

./: Makefile.in  NEWS  aclocal.m4  configure  configure.ac  generate-tags.sh  indent.sh  setup-slurm.sh  slurm.conf  slurm.conf.example  slurm.spec
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/phpext/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/slurmdb-direct/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: Makefile.in
slurm-16.05/auxdir/: Makefile.in
slurm-16.05/src/: Makefile.in
src/bcast/: Makefile.in
src/layouts/: Makefile.in
src/plugins/: Makefile.in
src/plugins/select/openstack/: Makefile.am  Makefile.in  select_openstack.c  select_openstack.h
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.in
src/slurmd/: Makefile.in
src/slurmdbd/: Makefile.in
src/smap/: Makefile.in
src/smd/: Makefile.in
src/sprio/: Makefile.in
src/squeue/: Makefile.in
testsuite/: Makefile.in
(+196 files in other folders)
